data/all_generated_tests/raw_wast_tests/block_InvalidorInconsistentControlFlowGraph_2455.wast
;; 6. **Test Description**: Establish a block that improperly ends without closing all nested blocks. WebAssembly should flag an improper nesting issue, whereas `wizard_engine` might correctly reset and initialize to handle it.    - **Constraint Checked**: Ensuring well-nested blocks.    - **Relation to CFG**: Incomplete CFG paths leading to unreachable code or incorrect end states.

(assert_invalid
  (module (func $improper-nesting
    (block
      (block
        (block
          (i32.const 1)
        )
      )
  ))
  "unmatched `end` in nested blocks"
)